// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`story.MfaDeviceError 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c7 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
  padding: 32px;
}

.c4 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c19 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 50%;
}

.c22 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 8px;
  width: 100%;
}

.c23:hover,
.c23:focus {
  background: #B29DFF;
}

.c23:active {
  background: #C5B6FF;
}

.c23:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c3 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-right: 16px;
  font-size: 30px;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  color: #FFFFFF;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 4px;
  color: #FFFFFF;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin: 0px;
  margin-top: 8px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c21 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c21:hover,
.c21:focus,
.c21:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c21::-ms-clear {
  display: none;
}

.c21::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c21:read-only {
  cursor: not-allowed;
}

.c21:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c20 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c17 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c14 {
  display: block;
  outline: none;
  width: 145px;
  height: 145px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  gap: 16px;
}

.c13 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  height: 240px;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c18 {
  box-sizing: border-box;
  height: 100px;
  display: flex;
  align-items: center;
}

.c11 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c12 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c15 {
  border: 4px solid white;
}

<form
  class="c0"
  width="464"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="c3 icon icon-arrow_back "
        font-size="30"
        style="cursor: pointer;"
      />
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.slightlyMuted"
        >
          Step 2 of 2
        </div>
        <div
          class="c6"
          color="text.main"
        >
          Set Two-Factor Device
        </div>
      </div>
    </div>
    <div
      class="c7"
      kind="danger"
    >
      some server error message
    </div>
    <div
      class="c8"
      color="text.main"
    >
      Two-Factor Method
    </div>
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <label
          class="c11"
        >
          <input
            checked=""
            class="c12"
            name="mfaType"
            type="radio"
            value="otp"
          />
          <span>
            Authenticator App
          </span>
        </label>
      </div>
    </div>
    <div
      class="c13"
      height="240px"
    >
      <img
        class="c14 c15"
        height="145px"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcgAAAHIEAAAAAC/Wvl1AAAJV0lEQVR4nOzdsW4jORZA0fbC///LXowVTFIWmqAefUtzTrDJeEtltS+YPDx+fn39ASL+99svAPzr85//+fj47df4ycr5ff1bXD9h/2f3vcenTf0LrTzh2tnvd9/jfZ2QECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgI+fz5P50dOz870rT/u3VH0VZ+dv+32B9mW1H41vc9e18nJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp6Mzl0rjCkV9stNjYytvG9hkOzs+F5nxO3vrL+vExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSHLo3M8nB1bOztItv9pU8N3+59W54SEEEFCiCAhRJAQIkgIESSECBJCBAkhgoQQQULIG43OvcdOs7NDZ9cKQ3L7o4n3HKhzQkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIWR5dO5uA0lT42Vnnzu1427/Hfaf0B2H+42/dSckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCnozOTQ1mTdnfLzd1UenZcbjumF3hZ691/tadkBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPkenbvbJrlrZwez9t9h39khubPvcPY763BCQoggIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5OPrq3FJ6LWpS0L3nzD1PUxdatp936l3uNZ9swcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQkYvbN3f8FW4SPPs1aErule+Fi6u7Xr2PTghIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQ8jF5geV/b1Tq7Ja8qecW9vedvVi1s4vOCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJDl0bnCoNOUs/vaCjv5pv7d9jfUrTy3MGb3qt/CCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJAnF7ZeK1zFWbgA9ezPrji7HW7F1PfQHai7Zusc3IQgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5Hvr3NTw0oqzI3nda1GvFS65feffbZ+tc/CGBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSFPRudWnL189OwQ177uOxQGFqeeULhEeP3NnJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5vrC1cLXlylDU2R13+084O1h47exut8K1viumBgvXn+CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyMfqWFdhO9yUV126+Xc/u/8OK+52Ke/KE/adHXm0dQ5uQpAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZHTu7KjU3a58LexKu3Z2QO09LnedYusc3JogIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhZHnr3A+PGdppdvYJ+wq76M5+k1MDliu6G/XWOSEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDy+eclQ1z7g0P7G+qmRqWmhu9WfuPCpr53VtiPaOsc5AgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn/+T91NZ/tP2B9buzY1QrjvbtfOrpgafPuNPXtOSAgRJIQIEkIECSGChBBBQoggIUSQECJICBEkhHyPznV2bv3dz147O+g0NV5WGFub+nvY36jX/Xu4tv4bOyEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZOvcvpUxpf2RpsJY1bWpa2f3P23f2VG/qUtup76z9Sc4ISFEkBAiSAgRJIQIEkIECSGChBBBQoggIUSQELI8Ojc1KlXYZjd1mefUtbN3GzecGt87+/3uf9o1W+cgR5AQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyPTp3dlyrMII19Q5TQ1wr9sfA7vZvPLXVb2pI7hknJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp5snfuNnVt/94SzV5IWLnfdf0JhoG7f2b/JFa96ByckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn4e+Tm7I2xFYbdbYYPa1BNWFEbRrp39Hl71Dk5ICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSELF/YOmV/09nUvraz9rfDXetu6iu8w9Snrf9uTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ82Tr3w//hZteBvvM+vLtt1Fv5tMLw3bWpa4gfP+uEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLWucKOsKnhu6kxu8IVqiufdnbccF/3r2SdExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGfr3nM1GWpZwe+zm4v23d2f9/+O+x/v1NPKFwl++CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLoXGEo6m5jdlNb3N5jb92KwuWus+/ghIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjH11fjQtF93QG199gD173q9D2+3wcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQj7udknpn8Ehrv19Yt1Pu3Z2i9vZ8b2zI4+v+h6ckBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPm+sPXs1q4V1wNJ++NlZ6282f4w28oTCpfcFnYe7n8Pr/rWnZAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5/Pk/nd1Hd3a8rKCw7+/sHrizQ3LXpj7tVc91QkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIeTJ6Ny1qctSu87+xvvby1Z20Z21/y/f/Y1fNRbohIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FzX1IjbynOnriQtvMOK7vewb2rn4eMJTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIS80ejc1IWtZy+CvdtOvmtTg3pTY3b772DrHLwhQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FxhtGvlHaY2yV1beW7hCtV93d1uUz879WkPTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ8GZ3rjnbtD76d3X92ber60v0xsClnB9/OsnUO3pAgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5KMwdgQ8OCEhRJAQ8v8AAAD//1QuL6EmJFBiAAAAAElFTkSuQmCC"
        width="145px"
      />
      <div
        class="c16"
        color="text.slightlyMuted"
        font-size="1"
      >
        Scan the QR Code with any authenticator app and enter the generated code. We recommend
         
        <a
          class="c17"
          href="https://authy.com/download/"
          rel="noreferrer"
          target="_blank"
        >
          Authy
        </a>
        .
      </div>
    </div>
    <div
      class="c18"
      height="100"
    >
      <div
        class="c19"
        width="50%"
      >
        <label
          class="c20"
          font-size="0"
        >
          Device name
          <input
            autocomplete="off"
            class="c21"
            inputmode="text"
            placeholder="Name"
            type="text"
            value="otp-device"
          />
        </label>
      </div>
      <div
        class="c22"
        width="50%"
      >
        <label
          class="c20"
          font-size="0"
        >
          Authenticator code
          <input
            autocomplete="one-time-code"
            class="c21"
            inputmode="numeric"
            placeholder="123 456"
            type="text"
            value=""
          />
        </label>
      </div>
    </div>
    <button
      class="c23"
      kind="primary"
      width="100%"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`story.MfaDeviceOn 1`] = `
.c1 {
  box-sizing: border-box;
  padding: 32px;
}

.c4 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c16 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 0px;
  width: 100%;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 8px;
  width: 100%;
}

.c19:hover,
.c19:focus {
  background: #B29DFF;
}

.c19:active {
  background: #C5B6FF;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c3 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-right: 16px;
  font-size: 30px;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  color: #FFFFFF;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 4px;
  color: #FFFFFF;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c18 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c18:hover,
.c18:focus,
.c18:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c18::-ms-clear {
  display: none;
}

.c18::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c18:read-only {
  cursor: not-allowed;
}

.c18:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c17 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c13 {
  display: block;
  outline: none;
  width: 220px;
  height: 154px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  gap: 16px;
}

.c12 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  height: 240px;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c15 {
  box-sizing: border-box;
  height: 100px;
  display: flex;
  align-items: center;
}

.c10 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c11 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

<form
  class="c0"
  width="464"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="c3 icon icon-arrow_back "
        font-size="30"
        style="cursor: pointer;"
      />
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.slightlyMuted"
        >
          Step 2 of 2
        </div>
        <div
          class="c6"
          color="text.main"
        >
          Set Two-Factor Device
        </div>
      </div>
    </div>
    <div
      class="c7"
      color="text.main"
    >
      Two-Factor Method
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        <label
          class="c10"
        >
          <input
            checked=""
            class="c11"
            name="mfaType"
            type="radio"
            value="webauthn"
          />
          <span>
            Hardware Key
          </span>
        </label>
        <label
          class="c10"
        >
          <input
            class="c11"
            name="mfaType"
            type="radio"
            value="otp"
          />
          <span>
            Authenticator App
          </span>
        </label>
      </div>
    </div>
    <div
      class="c12"
      height="240px"
    >
      <img
        class="c13"
        height="154px"
        src="file_stub"
        width="220px"
      />
      <div
        class="c14"
        color="text.slightlyMuted"
        font-size="1"
      >
        We support a wide range of hardware devices including YubiKeys, Touch ID, watches, and more.
      </div>
    </div>
    <div
      class="c15"
      height="100"
    >
      <div
        class="c16"
        width="100%"
      >
        <label
          class="c17"
          font-size="0"
        >
          Device name
          <input
            autocomplete="off"
            class="c18"
            inputmode="text"
            placeholder="Name"
            type="text"
            value="webauthn-device"
          />
        </label>
      </div>
    </div>
    <button
      class="c19"
      kind="primary"
      width="100%"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`story.MfaDeviceOtp 1`] = `
.c1 {
  box-sizing: border-box;
  padding: 32px;
}

.c4 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c18 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 50%;
}

.c21 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c22 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 8px;
  width: 100%;
}

.c22:hover,
.c22:focus {
  background: #B29DFF;
}

.c22:active {
  background: #C5B6FF;
}

.c22:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c3 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-right: 16px;
  font-size: 30px;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  color: #FFFFFF;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 4px;
  color: #FFFFFF;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin: 0px;
  margin-top: 8px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c20 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c20:hover,
.c20:focus,
.c20:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c20::-ms-clear {
  display: none;
}

.c20::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c20:read-only {
  cursor: not-allowed;
}

.c20:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c19 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c16 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c13 {
  display: block;
  outline: none;
  width: 145px;
  height: 145px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  gap: 16px;
}

.c12 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  height: 240px;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c17 {
  box-sizing: border-box;
  height: 100px;
  display: flex;
  align-items: center;
}

.c10 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c11 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c14 {
  border: 4px solid white;
}

<form
  class="c0"
  width="464"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="c3 icon icon-arrow_back "
        font-size="30"
        style="cursor: pointer;"
      />
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.slightlyMuted"
        >
          Step 2 of 2
        </div>
        <div
          class="c6"
          color="text.main"
        >
          Set Two-Factor Device
        </div>
      </div>
    </div>
    <div
      class="c7"
      color="text.main"
    >
      Two-Factor Method
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        <label
          class="c10"
        >
          <input
            checked=""
            class="c11"
            name="mfaType"
            type="radio"
            value="otp"
          />
          <span>
            Authenticator App
          </span>
        </label>
      </div>
    </div>
    <div
      class="c12"
      height="240px"
    >
      <img
        class="c13 c14"
        height="145px"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcgAAAHIEAAAAAC/Wvl1AAAJV0lEQVR4nOzdsW4jORZA0fbC///LXowVTFIWmqAefUtzTrDJeEtltS+YPDx+fn39ASL+99svAPzr85//+fj47df4ycr5ff1bXD9h/2f3vcenTf0LrTzh2tnvd9/jfZ2QECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgI+fz5P50dOz870rT/u3VH0VZ+dv+32B9mW1H41vc9e18nJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp6Mzl0rjCkV9stNjYytvG9hkOzs+F5nxO3vrL+vExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSHLo3M8nB1bOztItv9pU8N3+59W54SEEEFCiCAhRJAQIkgIESSECBJCBAkhgoQQQULIG43OvcdOs7NDZ9cKQ3L7o4n3HKhzQkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIWR5dO5uA0lT42Vnnzu1427/Hfaf0B2H+42/dSckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCnozOTQ1mTdnfLzd1UenZcbjumF3hZ691/tadkBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPkenbvbJrlrZwez9t9h39khubPvcPY763BCQoggIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5OPrq3FJ6LWpS0L3nzD1PUxdatp936l3uNZ9swcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQkYvbN3f8FW4SPPs1aErule+Fi6u7Xr2PTghIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQ8jF5geV/b1Tq7Ja8qecW9vedvVi1s4vOCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJDl0bnCoNOUs/vaCjv5pv7d9jfUrTy3MGb3qt/CCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJAnF7ZeK1zFWbgA9ezPrji7HW7F1PfQHai7Zusc3IQgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5Hvr3NTw0oqzI3nda1GvFS65feffbZ+tc/CGBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSFPRudWnL189OwQ177uOxQGFqeeULhEeP3NnJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5vrC1cLXlylDU2R13+084O1h47exut8K1viumBgvXn+CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyMfqWFdhO9yUV126+Xc/u/8OK+52Ke/KE/adHXm0dQ5uQpAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZHTu7KjU3a58LexKu3Z2QO09LnedYusc3JogIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhZHnr3A+PGdppdvYJ+wq76M5+k1MDliu6G/XWOSEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDy+eclQ1z7g0P7G+qmRqWmhu9WfuPCpr53VtiPaOsc5AgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn/+T91NZ/tP2B9buzY1QrjvbtfOrpgafPuNPXtOSAgRJIQIEkIECSGChBBBQoggIUSQECJICBEkhHyPznV2bv3dz147O+g0NV5WGFub+nvY36jX/Xu4tv4bOyEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZOvcvpUxpf2RpsJY1bWpa2f3P23f2VG/qUtup76z9Sc4ISFEkBAiSAgRJIQIEkIECSGChBBBQoggIUSQELI8Ojc1KlXYZjd1mefUtbN3GzecGt87+/3uf9o1W+cgR5AQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyPTp3dlyrMII19Q5TQ1wr9sfA7vZvPLXVb2pI7hknJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp5snfuNnVt/94SzV5IWLnfdf0JhoG7f2b/JFa96ByckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn4e+Tm7I2xFYbdbYYPa1BNWFEbRrp39Hl71Dk5ICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSELF/YOmV/09nUvraz9rfDXetu6iu8w9Snrf9uTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ82Tr3w//hZteBvvM+vLtt1Fv5tMLw3bWpa4gfP+uEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLWucKOsKnhu6kxu8IVqiufdnbccF/3r2SdExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGfr3nM1GWpZwe+zm4v23d2f9/+O+x/v1NPKFwl++CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLoXGEo6m5jdlNb3N5jb92KwuWus+/ghIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjH11fjQtF93QG199gD173q9D2+3wcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQj7udknpn8Ehrv19Yt1Pu3Z2i9vZ8b2zI4+v+h6ckBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPm+sPXs1q4V1wNJ++NlZ6282f4w28oTCpfcFnYe7n8Pr/rWnZAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5/Pk/nd1Hd3a8rKCw7+/sHrizQ3LXpj7tVc91QkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIeTJ6Ny1qctSu87+xvvby1Z20Z21/y/f/Y1fNRbohIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FzX1IjbynOnriQtvMOK7vewb2rn4eMJTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIS80ejc1IWtZy+CvdtOvmtTg3pTY3b772DrHLwhQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FxhtGvlHaY2yV1beW7hCtV93d1uUz879WkPTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ8GZ3rjnbtD76d3X92ber60v0xsClnB9/OsnUO3pAgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5KMwdgQ8OCEhRJAQ8v8AAAD//1QuL6EmJFBiAAAAAElFTkSuQmCC"
        width="145px"
      />
      <div
        class="c15"
        color="text.slightlyMuted"
        font-size="1"
      >
        Scan the QR Code with any authenticator app and enter the generated code. We recommend
         
        <a
          class="c16"
          href="https://authy.com/download/"
          rel="noreferrer"
          target="_blank"
        >
          Authy
        </a>
        .
      </div>
    </div>
    <div
      class="c17"
      height="100"
    >
      <div
        class="c18"
        width="50%"
      >
        <label
          class="c19"
          font-size="0"
        >
          Device name
          <input
            autocomplete="off"
            class="c20"
            inputmode="text"
            placeholder="Name"
            type="text"
            value="otp-device"
          />
        </label>
      </div>
      <div
        class="c21"
        width="50%"
      >
        <label
          class="c19"
          font-size="0"
        >
          Authenticator code
          <input
            autocomplete="one-time-code"
            class="c20"
            inputmode="numeric"
            placeholder="123 456"
            type="text"
            value=""
          />
        </label>
      </div>
    </div>
    <button
      class="c22"
      kind="primary"
      width="100%"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`story.MfaDeviceWebauthn 1`] = `
.c1 {
  box-sizing: border-box;
  padding: 32px;
}

.c4 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c16 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 0px;
  width: 100%;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 8px;
  width: 100%;
}

.c19:hover,
.c19:focus {
  background: #B29DFF;
}

.c19:active {
  background: #C5B6FF;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c3 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-right: 16px;
  font-size: 30px;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  color: #FFFFFF;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 4px;
  color: #FFFFFF;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c18 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c18:hover,
.c18:focus,
.c18:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c18::-ms-clear {
  display: none;
}

.c18::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c18:read-only {
  cursor: not-allowed;
}

.c18:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c17 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c13 {
  display: block;
  outline: none;
  width: 220px;
  height: 154px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  gap: 16px;
}

.c12 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  height: 240px;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c15 {
  box-sizing: border-box;
  height: 100px;
  display: flex;
  align-items: center;
}

.c10 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c11 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

<form
  class="c0"
  width="464"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="c3 icon icon-arrow_back "
        font-size="30"
        style="cursor: pointer;"
      />
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.slightlyMuted"
        >
          Step 2 of 2
        </div>
        <div
          class="c6"
          color="text.main"
        >
          Set Two-Factor Device
        </div>
      </div>
    </div>
    <div
      class="c7"
      color="text.main"
    >
      Two-Factor Method
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        <label
          class="c10"
        >
          <input
            checked=""
            class="c11"
            name="mfaType"
            type="radio"
            value="webauthn"
          />
          <span>
            Hardware Key
          </span>
        </label>
      </div>
    </div>
    <div
      class="c12"
      height="240px"
    >
      <img
        class="c13"
        height="154px"
        src="file_stub"
        width="220px"
      />
      <div
        class="c14"
        color="text.slightlyMuted"
        font-size="1"
      >
        We support a wide range of hardware devices including YubiKeys, Touch ID, watches, and more.
      </div>
    </div>
    <div
      class="c15"
      height="100"
    >
      <div
        class="c16"
        width="100%"
      >
        <label
          class="c17"
          font-size="0"
        >
          Device name
          <input
            autocomplete="off"
            class="c18"
            inputmode="text"
            placeholder="Name"
            type="text"
            value="webauthn-device"
          />
        </label>
      </div>
    </div>
    <button
      class="c19"
      kind="primary"
      width="100%"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`story.PasswordOnlyError 1`] = `
.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c5 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c9:hover,
.c9:focus {
  background: #B29DFF;
}

.c9:active {
  background: #C5B6FF;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
}

.c8 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c8:hover,
.c8:focus,
.c8:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c8:read-only {
  cursor: not-allowed;
}

.c8:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c2 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c2 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c2 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c2 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

<form
  class="c0"
  width="464"
>
  <div
    class="c1"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="password"
      >
        <div
          class="c4"
          color="text.main"
        >
          Set A Password
        </div>
        <div
          class="c5"
          kind="danger"
        >
          some server error message
        </div>
        <div
          class="c6"
        >
          <label
            class="c7"
            font-size="0"
          >
            Username
            <input
              autocomplete="off"
              class="c8"
              inputmode="text"
              readonly=""
              type="text"
              value="john@example.com"
            />
          </label>
        </div>
        <div
          class="c6"
        >
          <label
            class="c7"
            font-size="0"
          >
            Password
            <input
              autocomplete="off"
              class="c8"
              inputmode="text"
              placeholder="Password"
              type="password"
              value=""
            />
          </label>
        </div>
        <div
          class="c6"
        >
          <label
            class="c7"
            font-size="0"
          >
            Confirm Password
            <input
              autocomplete="off"
              class="c8"
              inputmode="text"
              placeholder="Confirm Password"
              type="password"
              value=""
            />
          </label>
        </div>
        <button
          class="c9"
          kind="primary"
          width="100%"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`story.PrimaryPasswordlessError 1`] = `
.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c5 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  padding-bottom: 24px;
  padding-top: 32px;
  padding-left: 32px;
  padding-right: 32px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c10 {
  box-sizing: border-box;
  margin-top: 16px;
  text-align: center;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 4px;
  width: 100%;
}

.c9:hover,
.c9:focus {
  background: #B29DFF;
}

.c9:active {
  background: #C5B6FF;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: none;
  text-transform: none;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:hover,
.c11:focus {
  background: none;
  text-decoration: underline;
}

.c11:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
}

.c8 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c8:hover,
.c8:focus,
.c8:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c8:read-only {
  cursor: not-allowed;
}

.c8:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c2 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c2 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c2 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c2 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

<form
  class="c0"
  width="464"
>
  <div
    class="c1"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="passwordless"
      >
        <div
          class="c4"
          color="text.main"
        >
          Set A Passwordless Device
        </div>
        <div
          class="c5"
          kind="danger"
        >
          some server error message
        </div>
        <div
          class="c6"
          width="100%"
        >
          <label
            class="c7"
            font-size="0"
          >
            Device name
            <input
              autocomplete="off"
              class="c8"
              inputmode="text"
              placeholder="Name"
              type="text"
              value="passwordless-device"
            />
          </label>
        </div>
        <button
          class="c9"
          kind="primary"
          width="100%"
        >
          Submit
        </button>
        <div
          class="c10"
        >
          <button
            class="c11"
            kind="text"
          >
            Use password
          </button>
        </div>
      </div>
    </div>
  </div>
</form>
`;
